Change the definition of IS_ARABIC_ALPHABETIC to correct the display of Persian and Urdu numerals. Bug 82347, r=mkaply, sr=kin